excerpts now generated from user defined separator

--- a/about.html
+++ b/about.html
@@ -6,5 +6,4 @@ group: navigation
 ---
 {% include JB/setup %}
 
-<h2>About this blog ...</h2>
-<p>Some old rubbish here ...</p>
+<p>I'm Johan van der Knijff, and this is my blog. I mainly created this as a companion to my Twitter feed, for all those occasions when 140 characters are <em>not</em> enough. Most posts here will be in English, some may be in Dutch. Subject matter: assorted random stuff. All views mine and mine only, and sometimes not even that.</p>
