some more refinements

--- a/about.html
+++ b/about.html
@@ -6,4 +6,6 @@ group: navigation
 ---
 {% include JB/setup %}
 
-<p>I'm Johan van der Knijff, and this is my blog. I mainly created this as a companion to my Twitter feed, for all those occasions when 140 characters are <em>not</em> enough. Most posts here will be in English, some may be in Dutch. Subject matter: assorted random stuff. All views mine and mine only, and sometimes not even that.</p>
+<h1>About</h1>
+    
+<p>This is the personal blog of Johan van der Knijff. I mainly created this as a companion to my Twitter feed, for all those occasions when 140 characters are <em>not</em> enough. Most posts here will be in English, some may be in Dutch. Subject matter: assorted random stuff.</p>
