--- a/about.html
+++ b/about.html
@@ -8,4 +8,4 @@ group: navigation
 
 <h1>About</h1>
     
-<p>This is the personal blog of Johan van der Knijff. I mainly created this as a companion to my Twitter feed, for all those occasions when 140 characters are <em>not</em> enough. Most posts here will be in English, some may be in Dutch. Subject matter: assorted random stuff.</p>
+<p>This is the personal blog of Johan van der Knijff. I mainly created this as a companion to my Twitter account, for all those occasions when 140 characters are not enough. Posts will be irregular; most will be in English, some may be in Dutch. Subject matter: assorted random stuff.</p>
