updated About page

--- a/about.html
+++ b/about.html
@@ -8,4 +8,5 @@ group: navigation
 
 <h1>About</h1>
     
-<p>This is the personal blog of Johan van der Knijff. I mainly created this as a companion to my Twitter account, for all those occasions when 140 characters are not enough. Posts will be irregular; most will be in English, some may be in Dutch. Subject matter: assorted random stuff.</p>
+<p>This is the blog of Johan van der Knijff. Most of the posts here are re-posts of blogs that were published earlier on the <a href="http://openpreservation.org/"/>Open Preservation Foundation</a> web site, and the (now discontinued) <a href="http://blog.kbresearch.nl/"/>KB Research blog.</p>
+
