--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: 404 - Page not found
-permalink: {{ BASE_PATH }}/404.html
+permalink: {{ site.url }}/404.html
 ---
 
 <div class="text-center">
