--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: 404 - Page not found
-permalink: {{ site.url }}/404.html
+permalink: /404.html
 ---
 
 <div class="text-center">
@@ -10,6 +10,7 @@ permalink: {{ site.url }}/404.html
   <br/>
 </div>
 
+<!--
 <script>
   // on 2016-02-01 GitHub Pages upgraded to Jekyll3, which broke all blog posts with trailing slashes
   // and there are tons of links out there on the web to posts with a trailing slash, so can't ignore it
@@ -18,4 +19,4 @@ permalink: {{ site.url }}/404.html
     window.location = url.substr(0, url.length - 1);
   }
 </script>
-
+-->
