--- a/tags.html
+++ b/tags.html
@@ -6,10 +6,7 @@ group: navigation
 ---
 {% include JB/setup %}
 
-<ul class="tag_box inline">
-  {% assign tags_list = site.tags %}  
-  {% include JB/tags_list %}
-</ul>
+<h1>Tags</h1>
 
 
 {% for tag in site.tags %} 
