--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ title: bitsgalore.org
 {% if paginator.total_pages > 1 %}
 <div class="pagination">
   {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
+    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Newer</a>
   {% else %}
-    <span>&laquo; Prev</span>
+    <span>&laquo; Newer</span>
   {% endif %}
 
   {% for page in (1..paginator.total_pages) %}
@@ -35,9 +35,9 @@ title: bitsgalore.org
   {% endfor %}
 
   {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
+    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Older &raquo;</a>
   {% else %}
-    <span>Next &raquo;</span>
+    <span>Older &raquo;</span>
   {% endif %}
 </div>
 {% endif %}
