--- a/tags.html
+++ b/tags.html
@@ -8,8 +8,9 @@ group: navigation
 
 <h1>Tags</h1>
 
+{% assign tags_list = site.tags | sort %}
 
-{% for tag in site.tags %} 
+{% for tag in tags_list %} 
   <h2 id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
   <ul>
     {% assign pages_list = tag[1] %}  
