--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@ title: bitsgalore.org
    <!-- This creates excerpt based on user-defined separator (which needs to be inserted in each post! -->
    {{ post.content | split: '<!-- more -->' | first }}
    <small><a href="{{ BASE_PATH }}{{ post.url }}">More ...</a></small>
+   {% unless post.tags == empty %}
+   <ul class="tag_box inline">
+     <li><i class="icon-tags"></i></li>
+     {% assign tags_list = post.tags %}
+     {% include JB/tags_list %}
+   </ul>
+  {% endunless %}
    </div> 
 {% endfor %}
 
