--- a/404.html
+++ b/404.html
@@ -5,11 +5,16 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
+  <h1>WHEEL OUT THE DIGITAL DARK AGE KLAXON!!11!!</h1>
+
+  <figure class="image">
+    <img src="{{ BASE_PATH }}/images/bgava-large-glitched.png" alt="Bitrot a go-go">
+  </figure>
+
+  <p>This page does not exist (404 error)!</p>
   <br/>
 </div>
-
+<hr>
 <script>
   // on 2016-02-01 GitHub Pages upgraded to Jekyll3, which broke all blog posts with trailing slashes
   // and there are tons of links out there on the web to posts with a trailing slash, so can't ignore it
